@@ -115,6 +115,7 @@ src/globbing
 src/lexgrog
 src/lexgrog.c
 src/man
+src/man-recode
 src/man_db.conf
 src/manconv
 src/mandb
