@@ -61,6 +61,7 @@ gnulib_modules="
   rbtree-list
   regex
   rename
+  renameat
   setenv
   sigaction
   signal
@@ -71,7 +72,9 @@ gnulib_modules="
   strcasestr
   strerror
   strsep
+  tempname
   timespec
+  unlinkat
   unsetenv
   utimens
   warnings
