@@ -464,6 +464,7 @@ MAN_TRANS_SUBST([apropos])
 MAN_TRANS_SUBST([catman])
 MAN_TRANS_SUBST([lexgrog])
 MAN_TRANS_SUBST([man])
+MAN_TRANS_SUBST([man-recode])
 MAN_TRANS_SUBST([manconv])
 MAN_TRANS_SUBST([mandb])
 MAN_TRANS_SUBST([manpath])
