@@ -542,6 +542,11 @@ However, this option allows you to convert several manual pages to a single
 encoding without having to explicitly state the encoding of each, provided
 that they were already installed in a structure similar to a manual page
 hierarchy.
+.IP
+Consider using
+.BR %man_recode% (1)
+instead for converting multiple manual pages, since it has an interface
+designed for bulk conversion and so can be much faster.
 .SS "Finding manual pages"
 .TP
 .BI \-L\  locale \fR,\ \fB\-\-locale= locale
