@@ -72,7 +72,8 @@ Print a help message and exit.
 Display version information.
 .SH "SEE ALSO"
 .if !'po4a'hide' .IR iconv (1),
-.if !'po4a'hide' .IR man (1)
+.if !'po4a'hide' .IR %man% (1),
+.if !'po4a'hide' .IR %man_recode% (1)
 .SH AUTHOR
 .nf
 .if !'po4a'hide' Colin Watson (cjwatson@debian.org).
