@@ -22,6 +22,7 @@
 [type:manext] $(srcdir)/man1/apropos.man1 $lang:$(builddir)/$lang/man1/apropos.man1 add_$lang:$(srcdir)/$lang/translator.add
 [type:manext] $(srcdir)/man1/lexgrog.man1 $lang:$(builddir)/$lang/man1/lexgrog.man1 add_$lang:$(srcdir)/$lang/translator.add
 [type:manext] $(srcdir)/man1/man.man1 $lang:$(builddir)/$lang/man1/man.man1 add_$lang:$(srcdir)/$lang/translator.add
+[type:manext] $(srcdir)/man1/man-recode.man1 $lang:$(builddir)/$lang/man1/man-recode.man1 add_$lang:$(srcdir)/$lang/translator.add
 [type:manext] $(srcdir)/man1/manconv.man1 $lang:$(builddir)/$lang/man1/manconv.man1 add_$lang:$(srcdir)/$lang/translator.add
 [type:manext] $(srcdir)/man1/manpath.man1 $lang:$(builddir)/$lang/man1/manpath.man1 add_$lang:$(srcdir)/$lang/translator.add
 [type:manext] $(srcdir)/man1/whatis.man1 $lang:$(builddir)/$lang/man1/whatis.man1 add_$lang:$(srcdir)/$lang/translator.add
