@@ -12,6 +12,7 @@ s,%catman%,@TRANS_CATMAN@,g
 s,%apropos%,@TRANS_APROPOS@,g
 s,%whatis%,@TRANS_WHATIS@,g
 s,%manconv%,@TRANS_MANCONV@,g
+s,%man_recode%,@TRANS_MAN_RECODE@,g
 s,%thzsoelim%,@TRANS_ZSOELIM_UPPER@,g
 s,%thman%,@TRANS_MAN_UPPER@,g
 s,%thmandb%,@TRANS_MANDB_UPPER@,g
@@ -20,6 +21,7 @@ s,%thcatman%,@TRANS_CATMAN_UPPER@,g
 s,%thapropos%,@TRANS_APROPOS_UPPER@,g
 s,%thwhatis%,@TRANS_WHATIS_UPPER@,g
 s,%thmanconv%,@TRANS_MANCONV_UPPER@,g
+s,%thman_recode%,@TRANS_MAN_RECODE_UPPER@,g
 s,%manpath_config_file%,%REPLACE_CONFIG_FILE%,g
 s,^l lx\.$,l l@TBL_X_FORMAT@.,
 s,^\.if !'po4a'hide' ,,
