@@ -14,6 +14,7 @@ src/globbing_test.c
 src/lexgrog.l
 src/lexgrog_test.c
 src/man.c
+src/man-recode.c
 src/manconv.c
 src/manconv_main.c
 src/mandb.c
