@@ -29,6 +29,11 @@ Major changes since man-db 2.8.7:
 	* manconv now guesses the input encoding based on the file name if
 	  it is not explicitly specified.
 
+	* There is a new "man-recode" program.  It fulfils a purpose similar
+	  to "man --recode", but has an interface designed for bulk
+	  conversion and so can be much faster when used on a large number
+	  of pages.
+
 	Compatibility notes:
 	--------------------
 
